[package]
name = "rusty-shooter"
version = "0.11.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
rg3d = { path = "../rg3d", version = "0.13.0" }
rand = "0.7.0"

[features]
enable_profiler = ["rg3d/enable_profiler"]